# GLFW_tmp

./: .gitignore  CMakeLists.txt  INPUT_complete_spreading  README.md
ActiveRotator/: GraphicsBase.cpp  World.hpp  main.cpp
Common/: shader.cpp  shader.hpp
CoupledOscillator/: CMakeLists.txt  Readme.md  World.cpp  main.cpp
FreeType/: libfreetype.dylib
GLSL/: Text_vs.glsl  fs1.glsl  t1_vs.glsl  t2_vs.glsl  t31_gs.glsl  t32_gs.glsl  t3_fs.glsl  t3_gs.glsl  tLine_gs.glsl  tLine_vs.glsl  vs1.glsl
Sample1/: CMakeLists.txt  World.hpp  main.cpp
World/: CMakeLists.txt  World.cpp  World.hpp  main.cpp  ppp.md
World2/: CMakeLists.txt  GraphicsBase.cpp  World.cpp  World.hpp  main.cpp
WorldText/: CMakeLists.txt  GraphicsBase.cpp  World.cpp  World.hpp  main.cpp
WorldText2/: CMakeLists.txt  GraphicsBase.cpp  World.cpp  World.hpp  main.cpp
test1/: CMakeLists.txt  main.cpp
test2/: CMakeLists.txt  main.cpp
test3/: CMakeLists.txt  main.cpp  ppp.md  segments.cpp  segments.hpp
